--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     {{ content }}
