--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -1,8 +1,5 @@
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  </head>
+  {% include file.ext %}
   <body>
     {{ content }}
   </body>
