--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -2,6 +2,8 @@
   {% include head.html %}
   <body>
     {% include analytics.html %}
-    {{ content }}
+    <div class="container">
+      {{ content }}
+    </div>
   </body>
 </html>
