Make it dangerous

--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -1,6 +1,6 @@
 <h1>Kød og Blod - en teaterkoncert over Sanne Salomonsens musik</h1>
 <p>
-  <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/">Køb billet</a>  
+  <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-danger">Køb billet</a>  
 </p>
 <img src="assets/images/frontpage.jpeg" alt="Kød og Blod">
 
