--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,4 +2,5 @@
   <title>{{ page.title }}</title>
   <meta charset="utf-8">
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/stylesheets/site.css" rel="stylesheet">
 </head>
