--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -1,3 +1,21 @@
-<h1>Kød og Blod - en teaterkoncert over Sanne Salomonsens musik <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-danger btn-large">Køb billet</a></h1>
-<img src="assets/images/frontpage.jpeg" alt="Kød og Blod">
+<h1><span class="logo">Kød og Blod</span> - en teaterkoncert over Sanne Salomonsens musik</h1>
+
+
+<div class="row">
+  <div class="span6 offset3">
+    <img src="assets/images/frontpage.jpeg" class="graphic" alt="Kød og Blod">
+  </div>  
+</div>
+
+<div class="row">
+  <div class="span12">
+    <p style="text-align:right;">
+      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-large btn-primary">Køb billet her</a>     
+    </p>
+    
+    
+  </div>
+   
+</div>
+
 
