--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -1,21 +1,52 @@
-<h1><span class="logo">Kød og Blod</span> - en teaterkoncert over Sanne Salomonsens musik</h1>
-
-
-<div class="row">
-  <div class="span6 offset3">
-    <img src="assets/images/frontpage.jpeg" class="graphic" alt="Kød og Blod">
-  </div>  
-</div>
 
 <div class="row">
   <div class="span12">
     <p style="text-align:right;">
-      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-large btn-primary">Køb billet her</a>     
+
     </p>
-    
+  </div>
+</div>
+
+<div class="row">
+  <div class="span12">
+    <div class="well">
+      <h4>
+        Sex og kærlighed. Kødet og blodet.
+      </h4>
+      <p>
+        Hvis man sælger sig selv, kan man da holde de to ting adskilte?
+      </p>
+      <p>Teaterkoncerten "Kød og blod" fortæller, igennem Sanne Salomonsens sange, historien om glædespigerne på et bordel. De nyder deres job, når tankerne er slået fra, men nogle gange melder følelserne sig. Pigerne forsøger at glemme, men kan ikke.</p>
+      <p>
+        Igennem forskellige billeder vil instruktøren Patrick Sindlev Gøtterup skabe en fortælling om bagsiden af medaljen, når man sælger sig selv. Han suppleres af koreografen Rie Simonsen, der med sit moderne præg sætter sensualiteten i højsædet, og musikalsk leder Anders Thermansen, der sætter Sannes musik i en rå og barsk, men følelsesfuld kontekst.
+      </p>
+      <p class="">
+        <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-primary">Køb billet her</a>     
+      </p>
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="span4">
+    <div class="well">
+      <h3>SPILLESTED:</h3>
+      Herlev Teaterbio<br>
+      Herlev Bygade 30<br>
+      2730 Herlev  
+    </div>
     
   </div>
-   
+  <div class="span4">
+    <div class="well">
+      <h3>SPILLEPERIODE:</h3>  
+      <p>
+        25. maj 2013 - 1. juni 2013
+      </p>
+    </div>
+    
+  </div>
 </div>
 
 
