--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -2,8 +2,17 @@
   {% include head.html %}
   <body>
     {% include analytics.html %}
+
+    {% include navigation.html %}
     <div class="container">
       {{ content }}
     </div>
+
+    <div class="container">
+      <footer>
+        &copy; 2013 Herlev Revy og Teater
+      </footer>  
+    </div>
+    
   </body>
 </html>
