--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -20,7 +20,7 @@
       <p>
         Igennem forskellige billeder vil instruktøren Patrick Sindlev Gøtterup skabe en fortælling om bagsiden af medaljen, når man sælger sig selv. Han suppleres af koreografen Rie Simonsen, der med sit moderne præg sætter sensualiteten i højsædet, og musikalsk leder Anders Thermansen, der sætter Sannes musik i en rå og barsk, men følelsesfuld kontekst.
       </p>
-      <p class="">
+      <p class="align-right">
         <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-primary">Køb billet her</a>     
       </p>
     </div>
