--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -1,51 +1,62 @@
-
 <div class="row">
   <div class="span12">
-    <p style="text-align:right;">
+    <div class="hero-unit">
+      <h1>Sex og kærlighed. Kødet og blodet.</h1>
+      <p>
+        Hvis man sælger sig selv, kan man da holde de to ting adskilte?
+      </p>
+    </div>  
+  </div>
+  
+</div>
 
+<div class="description row">
+  
+  <div class="span4">
+      <p>Teaterkoncerten "Kød og Blod" fortæller, igennem Sanne Salomonsens sange, historien om glædespigerne på et bordel. De nyder deres job, når tankerne er slået fra, men nogle gange melder følelserne sig. Pigerne forsøger at glemme, men kan ikke.</p>
+  </div>
+  <div class="span4">
+      <p>
+        Igennem forskellige billeder vil instruktøren <span class="person">Patrick Sindlev Gøtterup</span> skabe en fortælling om bagsiden af medaljen, når man sælger sig selv.
+      </p>
+  </div>
+  <div class="span4">
+    <p>
+       Han suppleres af koreografen <span class="person">Rie Simonsen</span>, der med sit moderne præg sætter sensualiteten i højsædet, og musikalsk leder <span class="person">Anders Thermansen</span>, der sætter Sannes musik i en rå og barsk, men følelsesfuld kontekst.
     </p>
   </div>
 </div>
 
 <div class="row">
-  <div class="span12">
-    <div class="well">
-      <h4>
-        Sex og kærlighed. Kødet og blodet.
-      </h4>
-      <p>
-        Hvis man sælger sig selv, kan man da holde de to ting adskilte?
-      </p>
-      <p>Teaterkoncerten "Kød og blod" fortæller, igennem Sanne Salomonsens sange, historien om glædespigerne på et bordel. De nyder deres job, når tankerne er slået fra, men nogle gange melder følelserne sig. Pigerne forsøger at glemme, men kan ikke.</p>
-      <p>
-        Igennem forskellige billeder vil instruktøren Patrick Sindlev Gøtterup skabe en fortælling om bagsiden af medaljen, når man sælger sig selv. Han suppleres af koreografen Rie Simonsen, der med sit moderne præg sætter sensualiteten i højsædet, og musikalsk leder Anders Thermansen, der sætter Sannes musik i en rå og barsk, men følelsesfuld kontekst.
-      </p>
-      <p class="align-right">
-        <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-primary">Køb billet her</a>     
-      </p>
+  <div class="span3 offset7">
+    <div class="align-right">
+      <p><strong>Spilleperiode:</strong></p>
+      <p><strong>SpilleSted:</strong></p>
+      
     </div>
+    
+  </div>
+  <div class="span2">
+    <div class="align-right">
+      <p>
+        25. maj - 1. juni
+      </p>
+      <p>
+        Herlev Teaterbio<br>
+        Herlev Bygade 30<br>
+        2730 Herlev    
+      </p>
+      
+      
+    </div>
+    
   </div>
 </div>
-
-
 <div class="row">
-  <div class="span4">
-    <div class="well">
-      <h3>SPILLESTED:</h3>
-      Herlev Teaterbio<br>
-      Herlev Bygade 30<br>
-      2730 Herlev  
-    </div>
-    
-  </div>
-  <div class="span4">
-    <div class="well">
-      <h3>SPILLEPERIODE:</h3>  
-      <p>
-        25. maj 2013 - 1. juni 2013
-      </p>
-    </div>
-    
+  <div class="span12">
+    <p class="align-right">
+      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-primary btn-large">Køb billet her</a>     
+    </p>
   </div>
 </div>
 
