Add billetlugen logo

--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -55,7 +55,7 @@
 <div class="row">
   <div class="span12">
     <p class="align-right">
-      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-primary btn-large">Køb billet her</a>     
+      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="billetlugen"><img src="/assets/images/billetlugen.png" alt="Køb billet på billetlugen.dk"></a><a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-primary btn-large">Køb billet her</a>     
     </p>
   </div>
 </div>
