--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,7 +19,8 @@
         <li><a href="/presse">Presse</a></li>
         <li><a href="/blog">Blog</a></li>
       </ul>
-      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="pull-right btn btn-large btn-primary">Køb billet her</a>     
+      
+      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="pull-right billetlugen"><img src="/assets/images/billetlugen.png" alt="Køb billet på billetlugen.dk"></a>
     </div>
     
   </div>
