--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="span12">
+        <div class="span10 offset1">
           <hr>
         </div>
       </div>
