Tweak typography on blog

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,7 +17,7 @@
           <div class="blog_post">
             <h2>At sælge billetter</h2>
             <p class="author">
-              Skrevet af Anders Lemke, PR ansvarlig - 23. februar 2013
+              Skrevet af Anders, PR ansvarlig - 23. februar 2013
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere beatae molestiae maxime cum fugiat assumenda libero animi nostrum cupiditate adipisci aspernatur eos explicabo consequatur. Earum a iure id doloribus reprehenderit.
