--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <title>{{ page.title }}</title>
   <meta charset="utf-8">
-  <link href='http://fonts.googleapis.com/css?family=Chivo:400,900,400italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Chivo:900,400' rel='stylesheet' type='text/css'>
   <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/assets/stylesheets/site.css" rel="stylesheet">
   <link href="/assets/stylesheets/navigation.css" rel="stylesheet">
