Finalize blog part

--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -1,12 +1,11 @@
 <div class="row">
   <div class="span12">
-    <div class="hero-unit">
-      <h1>Sex og kærlighed. Kødet og blodet.</h1>
-      <p>
-        Hvis man sælger sig selv, kan man da holde de to ting adskilte?
-      </p>
-    </div>  
+    <div id="poster">
+      
+    </div>
   </div>
+  
+  
   
 </div>
 
@@ -55,7 +54,7 @@
 <div class="row">
   <div class="span12">
     <p class="align-right">
-      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="billetlugen"><img src="/assets/images/billetlugen.png" alt="Køb billet på billetlugen.dk"></a><a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="btn btn-primary btn-large">Køb billet her</a>     
+      {% include billetlugen.html %}
     </p>
   </div>
 </div>
