--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,34 +4,22 @@
     {% include analytics.html %}
     
     <div class="container">
-      <div class="row header">
-        <div class="span12 center">
-          Du læser nu vores <a href="/blog">blog</a>. Her kommer du lidt bag om <a href="/">Kød og Blod</a>.
+      <div class="row">
+        <div class="span10 offset1 center">
+          <div class="blog-header">
+            Du læser nu vores <a href="/blog">blog</a>. Her kommer du lidt bag om forestillingen <a href="/">Kød og Blod</a>.  
+          </div>
         </div>
       </div>
     </div>
     
     <div class="container">
-      <div class="row">
-        <div class="span8 offset2">
-          <div class="blog_post">
-            <h2>At sælge billetter</h2>
-            <p class="author">
-              Skrevet af Anders, PR ansvarlig - 23. februar 2013
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere beatae molestiae maxime cum fugiat assumenda libero animi nostrum cupiditate adipisci aspernatur eos explicabo consequatur. Earum a iure id doloribus reprehenderit.
-            </p>
-            
-          </div>
-        </div>
-      </div>
+      {{ content }}
       <div class="row">
         <div class="span10 offset1">
-          <hr>
+          {% include navigation.html %}    
         </div>
       </div>
-      {{ content }}
     </div>
 
     <div class="container">
