--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,27 +1,11 @@
-<div class="container" id="top-banner">
-  <div class="row">
-    <div class="span12">
-    <h1>
-      <a href="/">Kød og Blod - Teaterkoncert over Sanne Salomonsens Musik </a>
-    </h1>      
-    </div>
-  </div>
-  
-</div>
+<div id="site-navigation">
+  <ul class="site-navigation nav nav-pills pull-left">
+    <li><a href="/">Forside</a></li>
+    <li><a href="/billeder">Billeder</a></li>
+    <li><a href="/video">Video</a></li>
+    <li><a href="/presse">Presse</a></li>
+    <li><a href="/blog">Blog</a></li>
+  </ul>
 
-<div class="container" id="site-navigation">
-  <div class="row">
-    <div class="span12">
-      <ul class="nav nav-pills pull-left">
-        <li><a href="/">Forside</a></li>
-        <li><a href="/billeder">Billeder</a></li>
-        <li><a href="/video">Video</a></li>
-        <li><a href="/presse">Presse</a></li>
-        <li><a href="/blog">Blog</a></li>
-      </ul>
-      
-      <a href="http://www.billetlugen.dk/teater/27059/koed-og-blod/" class="pull-right billetlugen"><img src="/assets/images/billetlugen.png" alt="Køb billet på billetlugen.dk"></a>
-    </div>
-    
-  </div>
+  {% include billetlugen.html %}
 </div>
