--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -2,8 +2,16 @@
   {% include head.html %}
   <body>
     {% include analytics.html %}
-
-    {% include navigation.html %}
+    
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          {% include navigation.html %}      
+        </div>
+      </div>
+    </div>
+    
+    
     <div class="container">
       {{ content }}
     </div>
