--- a/assets/stylesheets/blog_post.css
+++ b/assets/stylesheets/blog_post.css
@@ -16,6 +16,14 @@
   margin-bottom: 5px;
 }
 
+.blog_post h2 a {
+  color:inherit;
+}
+.blog_post h2 a:hover {
+  color:inherit;
+  text-decoration: none;
+}
+
 .blog_post .author {
   text-align:center;
   color: #666;
