Add scale and two blog posts

--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -27,35 +27,23 @@
 </div>
 
 <div class="row">
-  <div class="span3 offset7">
-    <div class="align-right">
-      <p><strong>Spilleperiode:</strong></p>
-      <p><strong>SpilleSted:</strong></p>
-      
-    </div>
-    
-  </div>
-  <div class="span2">
-    <div class="align-right">
-      <p>
-        25. maj - 1. juni
-      </p>
-      <p>
-        Herlev Teaterbio<br>
-        Herlev Bygade 30<br>
-        2730 Herlev    
-      </p>
-      
-      
-    </div>
-    
-  </div>
-</div>
-<div class="row">
-  <div class="span12">
+  <div class="span4 offset8">
     <p class="align-right">
       {% include billetlugen.html %}
     </p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="span4 offset8 info">
+    <dl>
+      <dt>Spilleperiode:</dt>
+          <dd>25. maj - 1. juni</dd>
+      <dt>Spillested:</dt>
+      <dd>Herlev Teaterbio<br>
+        Herlev Bygade 30<br>
+        2730 Herlev   </dd>
+    </dl>
   </div>
 </div>
 
