--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,12 @@
-<div id="site-navigation">
+
   <ul class="site-navigation nav nav-pills pull-left">
     <li><a href="/">Forside</a></li>
-    <li><a href="/billeder">Billeder</a></li>
+    <!-- <li><a href="/billeder">Billeder</a></li>
     <li><a href="/video">Video</a></li>
-    <li><a href="/presse">Presse</a></li>
+    <li><a href="/presse">Presse</a></li> -->
     <li><a href="/blog">Blog</a></li>
   </ul>
-
-  {% include billetlugen.html %}
-</div>
+	<div class="pull-right">
+		{% include billetlugen.html %}		
+	</div>
+  
