--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -7,7 +7,7 @@ layout: blog
     <div class="blog_post">
       <h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
       <p class="author">
-        Skrevet {{page.date | localize: "%A d. %-d. %B %Y" }} af {{ page.author }}
+        Skrevet af {{ page.author }}
       </p>
       {{ content }}
     </div>
