--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -3,7 +3,7 @@
   <body>
     {% include analytics.html %}
     
-    <div class="container">
+    <div class="container" id="site-navigation">
       <div class="row">
         <div class="span12">
           {% include navigation.html %}      
