--- a/assets/stylesheets/navigation.css
+++ b/assets/stylesheets/navigation.css
@@ -20,17 +20,17 @@
 
 #site-navigation {
   padding-top:10px;
+  margin-bottom:1.25em;
 }
 
-#site-navigation .nav a {
+.site-navigation.nav a {
   color:white;
-  font-size: 130%;
   font-weight:bold;
   padding-top: 12px;
   padding-bottom: 12px;
   letter-spacing: 2px;
 }
 
-#site-navigation .nav a:hover {
+.site-navigation.nav a:hover {
   color:#d92726;
 }
