--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/assets/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
   <script type="text/javascript" src="/assets/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
+  <link rel="image_src" href="http://www.kødogblod.dk/assets/images/square_poster.png">
 
   <script>
     $(document).ready(function() {
