--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
   <script type="text/javascript" src="/assets/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
   <link rel="image_src" href="http://www.kødogblod.dk/assets/images/square_poster.png">
+  <meta property="og:image" content="http://www.kødogblod.dk/assets/images/square_poster.png" />
+
 
   <script>
     $(document).ready(function() {
