Custom Facebook images

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,10 +24,10 @@
 
   <link rel="stylesheet" href="/assets/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
   <script type="text/javascript" src="/assets/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
-
-  <link rel="image_src" href="http://xn--kdogblod-54a.dk/assets/images/square_poster.png">
-  <meta property="og:image" content="http://xn--kdogblod-54a.dk/assets/images/square_poster.png" />
-
+  
+  <!-- Specify Facebook image -->
+  <link rel="image_src" href="{{ page.facebook_image }}">
+  <meta property="og:image" content="{{ page.facebook_image }}" />
 
   <script>
     $(document).ready(function() {
