Add presse page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
     <li><a href="/">Forside</a></li>
     <!-- <li><a href="/billeder">Billeder</a></li> -->
     <!-- <li><a href="/video">Video</a></li> -->
-    <!-- <li><a href="/presse">Presse</a></li>  -->
+    <li><a href="/presse">Presse</a></li> 
     <li><a href="/blog">Blog</a></li>
   </ul>
 	<div class="pull-right">
