--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -1,12 +1,21 @@
 <div class="row">
   <div class="span12">
+    
+  </div>
+</div>
+
+<div class="row">
+  <div class="span5">
     <div id="poster">
-      
+      <img src="/assets/images/frontpage.png" alt="">
     </div>
   </div>
-  
-  
-  
+  <div class="span6 offset1">
+      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3333.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3333.jpg" alt=""></a>
+      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3180.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3180.jpg" alt=""></a>
+      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3243.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3243.jpg" alt=""></a>
+      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3213.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3213.jpg" alt=""></a>
+    </div>
 </div>
 
 <div class="description row">
