--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 
   <ul class="site-navigation nav nav-pills pull-left">
     <li><a href="/">Forside</a></li>
-    <!-- <li><a href="/billeder">Billeder</a></li> -->
+    <li><a href="/billeder">Billeder</a></li>
     <!-- <li><a href="/video">Video</a></li> -->
     <li><a href="/presse">Presse</a></li> 
     <li><a href="/blog">Blog</a></li>
