--- a/_includes/frontpage.html
+++ b/_includes/frontpage.html
@@ -11,10 +11,10 @@
     </div>
   </div>
   <div class="span6 offset1">
-      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3333.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3333.jpg" alt=""></a>
-      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3180.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3180.jpg" alt=""></a>
-      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3243.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3243.jpg" alt=""></a>
-      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3213.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3213.jpg" alt=""></a>
+      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3333.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3333.jpg" alt="Foto: Herlev Fotoklub"></a>
+      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3180.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3180.jpg" alt="Foto: Herlev Fotoklub"></a>
+      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3243.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3243.jpg" alt="Foto: Herlev Fotoklub"></a>
+      <a class="fancybox" rel="gallery1" href="/assets/images/fotoklub/big/bent-Koedogblod_-3213.jpg"><img src="/assets/images/fotoklub/thumb/bent-Koedogblod_-3213.jpg" alt="Foto: Herlev Fotoklub"></a>
     </div>
 </div>
 
